# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
solutions/2015/: day01.py  day02.py
solutions/2024/: day01.py  day02.py  day03.py
utils/: aoc_client.py  display_manager.py  solution.py  solution_template.py  submit.py
